# rust-shrink

./: Cargo.toml  README.md  license
src/: main.rs
